--- a/reviews/_posts/2020-08-27-tlou2.md
+++ b/reviews/_posts/2020-08-27-tlou2.md
@@ -1,6 +1,6 @@
 ---
 layout: date
-title: "the last of us part ii"
+title: "the last of us part ii (full analysis)"
 date:   2020-08-27
 categories: self
 ---
@@ -39,9 +39,9 @@ reviewed on: ps4
 
 **buy at full price, sale, never: full**
 
-**hours spent on the game: 40 hours (and counting)**
+**hours spent on the game: 50 hours**
 
-**platinumed? yes (grounded mode in progress)**
+**platinumed? yes**
 
 music: 
 - true faith - new order
@@ -52,4 +52,25 @@ music:
 - future days - pearl jam
 - take on me - a-ha
 
+analysis:
+
+We’re all heroes of our own stories. In choosing between right and wrong, our tunnel vision leads us to think that regardless of the decisions we make, we could only ever be the protagonist. But what about when our choices shape the stories of other people? The line between virtuous and wicked becomes blurred and thinned when we consider that, to someone else, we may be the villain.
+
+My introduction to Naughty Dog was the Jak and Daxter trilogy -- I still cling onto the hope that a Jak 4 will be made -- but The Last of Us is Naughty Dog’s latest and greatest, revered by many as one of the best video games ever made. Its sequel, The Last of Us Part II, on the other hand, is one of the most controversial. False advertising, pre-release leaks, and an alleged “social justice warrior” agenda are just some of the issues that surround this game. These controversies further complexify the experience that The Last of Us Part II presents: one that is equal parts harrowing and beautiful, with a provocative narrative, excellent gameplay that represents major improvements from the first game, beautiful graphics and motion capture, and a meaningful infusion of music.
+
+The Last Of Us takes place in the year 2033, where a fungal-based, brain-altering pandemic has infected most of the world’s population. The story the game has to tell is the gem that outshines the cliche zombie apocalypse premise that is its overused shell. Joel, a grizzled and tired survivor, has lost his beloved daughter to the pandemic 20 years ago and is still grieving when he agrees to escort Ellie, a 14-year-old orphan immune to the virus, across the United States to help doctors develop a potential cure. Though skeptical and cold towards one another at first, Joel and Ellie develop an inseparable father-daughter relationship, their shared experiences binding them together in a world where love and trust are nowhere to be seen.
+
+Joel’s actions in the first game trigger a butterfly effect in The Last of Us Part II. After Joel successfully delivers Ellie to the doctors, he learns that to find the cure, Ellie needs to be killed. In the wake of this realization, Joel murders everyone and drives off with Ellie. Later, when she wakes up from her comatose state, Ellie asks Joel what happened; he lies and says the doctors gave up on finding a cure. We as players find ourselves at a moral crossroads: Did Joel do the right thing?
+
+At the beginning of the sequel, Ellie is forced to watch a stranger named Abby brutally murder Joel with a golf club for unknown reasons. Ellie sets off on a journey to find Abby and avenge Joel’s death. Much of the anger directed toward this game was due to this unexpected turn of events; many argue Joel was killed off in a disrespectful, undignified way, robbed of the heroic exit he deserved. Many also show contempt toward Abby for her role as his murderer. But in the harsh, lawless world of The Last of Us, what could be expected? People come and go without warning. And enemies may be less evil than we think.
+
+The Last of Us Part II has an ambitious, risky structure. Players take on two points of view, switching between past and present in both. The game’s boldest choice is perhaps the one to make you play as the antagonist. In a flashback, we discover that Abby’s father was one of the doctors in the hospital that Joel killed in cold blood in his effort to save Ellie. Her father’s death was a direct consequence of Joel’s actions, a loss that ultimately motivated Abby’s. By forcing us into Abby’s shoes, Naughty Dog teaches a lesson in empathy, breaking the traditional hero and villain archetypes. We aren’t asked to like her, but we are asked to understand her; we aren’t forced to agree with her choices, but we are asked to contemplate them. The developers successfully push us outside of our comfort zones, and that is something I adore.
+
+In revealing the grief, trauma, and self-acceptance of both Ellie and Abby, the game presents the characters as two sides of the same coin, pursuing revenge for a sense of peace they can’t truly find until they learn to accept one another. The Last of Us Part II is an allegory of moral relativism that teaches us there is no true hero or villain. The characters in this game are both good and bad; they all do what they need to reach their own peace of mind.
+
+The characters in this game are neither good nor bad, they all do good and bad things but they make choices they feel will allow them to reach their own peace of mind. Abby is haunted with recurring nightmares and is traumatized about her father’s death that she feels killing Joel will allow her to find the closure that she needs. Perhaps one of the reasons why Abby is built so muscular and burly is because she’s been training as a paramilitary for the past 4 years to one day find and kill Joel. She let this grudge against Joel destroy her relationship with her love interest and friends. Now that she has successfully killed Joel, Abby continues to have nightmares and doesn’t get the peace of mind and closure she thought she would by taking revenge on the man who murdered her father. After meeting two runaway kids from a cult, Yara and Lev, she has the same recurring nightmares, but this time it’s about them. Abby couldn’t save her dad in time but she could save these kids, and she decides to take a leap of faith. After saving them, Abby has the dream one last time but this time her dad is alive and healthy. By saving, loving, and caring for these 2 kids, this is the first time Abby has reached her inner peace with her father’s death. 
+
+On the other hand, in the same parallel, Ellie cannot eat, sleep and is plagued by the PTSD of watching Joel getting beaten to death. Similar to Abby, Ellie believes hunting down and killing the murderer of her father will allow her to find closure.  Though it might seem so, the game is not about hunting and killing Abby, it’s about Ellie’s journey to find closure and acceptance for Joel’s death. However, Ellie is so set on killing Abby that she’s willing to travel halfway across the country, killing anyone in her way in order to get to her. Ellie is so set on Abby just as Abby was so set on Joel, that it also ruins Ellie’s relationships with her loved ones and friends. The neverending cycle of violence and revenge is perpetuated here as each side blames the other for firing the first shot. But we know from Abby’s story that getting revenge will not bring the closure that she thinks she would get. In the final confrontation between the two, as Ellie is about to drown Abby, for the first time, she does not get flashbacks of Joel getting beaten to death but this time of him alive and healthy, playing the guitar, the same way as Abby began to see her father alive and healthy after she chose to save Yara and Lev. This is ultimately when Ellie decides to spare Abby and let her go. This is a visual image to illustrate that both these characters began to have the inner peace they looked for this entire time and redeemed themselves by helping someone instead of hurting them. A revenge plot didn’t end in revenge, but the plot doesn’t have to govern the narrative.
+
+The Last Of Us Part II reveals and grapples with the consequences of violence, revenge, and hate. As human beings, how do we deal with losing someone we haven’t made things right with? At the end of the game, we flash back to Joel and Ellie’s last conversation together. Ellie tells Joel, “I don't think I can ever forgive you for that. But I would like to try.” The reality of life is that it’s not perfect forgiveness, but the effort to forgive that keeps our relationships intact. That we can’t always get the closure we need, but even the road to closure is paved with valuable reminders and lessons. This game is an honest demonstration of life’s bleakness and its glimmers of hope.
 
