--- a/reviews/_posts/2020-11-12-ds.md
+++ b/reviews/_posts/2020-11-12-ds.md
@@ -34,6 +34,19 @@ reviewed on: ps5
 - value: 9/10
 - personal grade: 9/10
 
+pros:
+- beautifully recrafted world
+- excellent & satisfying combat system
+- deep rpg customization (different playstyles & builds)
+- additional added content (vs. the original demon's souls)
+- interesting lore/narrative
+
+cons:
+- relatively easier than other soulsborne games
+- overall short game
+- grinding for healing items (no refillables)
+
+
 **total score: 8.9/10**
 
 **buy at full price, sale, never: full**
@@ -41,6 +54,3 @@ reviewed on: ps5
 **hours spent on the game: 80 hours**
 
 **platinumed? yes**
-
-
-
