--- a/reviews/_posts/2020-12-10-cp2077.md
+++ b/reviews/_posts/2020-12-10-cp2077.md
@@ -34,6 +34,16 @@ reviewed on: pc
 - value: 7/10
 - personal grade: 7/10
 
+pros:
+- decent story and character design
+- great rpg customization (different playstyles/builds)
+
+cons:
+- extremely buggy
+- ai is poorly designed
+- gunplay is not satisfying/clunky
+- false marketing/advertising
+
 **total score: 6.9/10**
 
 **buy at full price, sale, never: sale**
@@ -41,6 +51,3 @@ reviewed on: pc
 **hours spent on the game: 73 hours**
 
 **platinumed? no**
-
-
-
