--- a/reviews/_posts/2020-12-29-pathless.md
+++ b/reviews/_posts/2020-12-29-pathless.md
@@ -1,7 +1,7 @@
 ---
 layout: date
 title: "the pathless"
-date:   2021-07-01
+date:   2020-12-29
 categories: self
 ---
 
@@ -35,10 +35,10 @@ reviewed on: ps5
 - personal grade: /10
 
 pros:
-- 
+- soon!
 
 cons:
-- 
+- soon!
 
 
 **total score: /10**
@@ -48,6 +48,3 @@ cons:
 **hours spent on the game: hours**
 
 **platinumed?**
-
-
-Coming soon!
