--- a/reviews/_posts/2021-02-03-botw.md
+++ b/reviews/_posts/2021-02-03-botw.md
@@ -34,6 +34,15 @@ reviewed on: nintendo switch
 - value: 9/10
 - personal grade: 9/10
 
+pros:
+- beautifully designed open world
+- ambient music/soundtrack
+- in depth game mechanics (combat, cooking, etc.)
+
+cons:
+- weapon durability system
+- choppy framerates/lag
+
 **total score: 9/10**
 
 **buy at full price, sale, never: full**
@@ -41,6 +50,3 @@ reviewed on: nintendo switch
 **hours spent on the game: 80 hours**
 
 **platinumed? n/a**
-
-
-
