--- a/reviews/_posts/2021-04-03-nioh2.md
+++ b/reviews/_posts/2021-04-03-nioh2.md
@@ -34,6 +34,18 @@ reviewed on: ps5
 - value: 10/10
 - personal grade: 9/10
 
+pros:
+- rich narrative that draws inspiration from japanese history and yokai folklore
+- amazing fast-paced combat mechanics
+- rich rpg customization (different playstyles & builds)
+- cooperative play up to 3 players
+- lots of end-game content
+
+cons:
+- pale art style might put off some people
+- very overwhelming inventory management system
+- re-used assets (dungeons, monsters, bosses)
+
 **total score: 9/10**
 
 **buy at full price, sale, never: full**
@@ -41,6 +53,3 @@ reviewed on: ps5
 **hours spent on the game: 300 hours**
 
 **platinumed? yes**
-
-
-
