--- a/reviews/_posts/2020-05-01-re3.md
+++ b/reviews/_posts/2020-05-01-re3.md
@@ -1,6 +1,6 @@
 ---
 layout: date
-title: "resident evil 3 remake"
+title: "resident evil 3 remake (full review)"
 date:   2020-05-01
 categories: self
 ---
