--- a/reviews/_posts/2020-05-15-ff7.md
+++ b/reviews/_posts/2020-05-15-ff7.md
@@ -1,6 +1,6 @@
 ---
 layout: date
-title: "final fantasy vii remake"
+title: "final fantasy vii remake (full review)"
 date:   2020-05-15
 categories: self
 ---
