--- a/reviews/_posts/2021-06-13-tandem.md
+++ b/reviews/_posts/2021-06-13-tandem.md
@@ -1,6 +1,6 @@
 ---
 layout: date
-title: "tandem: a tale of shadows"
+title: "tandem: a tale of shadows (full preview)"
 date:   2021-06-13
 categories: self
 ---
