--- a/reviews/_posts/2021-07-1-ool.md
+++ b/reviews/_posts/2021-07-1-ool.md
@@ -1,6 +1,6 @@
 ---
 layout: date
-title: "out of line"
+title: "out of line (full review)"
 date:   2021-07-01
 categories: self
 ---
@@ -26,10 +26,10 @@ platforms: pc, playstation, xbox, switch
 reviewed on: pc
 
 - visual: 10/10
-- audio: 9/10
+- audio: 8/10
 - gameplay: 8/10
 - narrative: 7/10
-- challenge: 6/10
+- challenge: 5/10
 - replayability: 5/10
 - value: 7/10
 - personal grade: 8/10
@@ -46,7 +46,7 @@ cons:
 - ambiguous/confusing narrative
 
 
-**total score: 7.5/10**
+**total score: 7.25/10**
 
 **buy at full price, sale, never: sale**
 
@@ -55,4 +55,14 @@ cons:
 **platinumed? yes**
 
 
-Coming soon!
+Out of Line is a charming indie puzzle platformer whose world appears almost surreal due to its hand-drawn artwork.
+
+You play as San, an ambiguous being trying to escape from a factory, constantly stalked by corrupted machinery. The narrative is presented without dialogue, making it obscure, and the overall story is pieced together via context clues and murals seen in the game’s luscious backdrops. Unfortunately, the artwork is not clear enough to make the story a complete one. After the game, I had a gist of the overarching narrative, but ended up with more questions than answers.
+
+Along your way, you encounter other amorphous characters that come to your aid. Out of Line does a fantastic job of synchronizing San’s actions with these characters in order to progress by activating a platform or avoiding the treacherous machinery. For a single player game, this “cooperative play” juxtaposes the loneliness felt in a world desolated by robot claws and distorted gadgetry. 
+
+Out of Line differentiates itself from traditional puzzle platformers with the newly introduced spear mechanic. Instead of being used as a weapon, the spear can be hurled and utilized as a platform on walls and a key to power up devices. A minor disappointment is that there is no combat in this game, despite the fact that you wield this powerful tool. It cannot be thrown as a weapon and does no damage to enemies if you attempt to do so.
+
+Though the overall difficulty of the puzzles is quite straightforward, the game does a great job ramping up the player to increasingly challenging problems. The puzzles start off simple enough, asking you to create a single platform with the spear, and go as far as requiring you to correctly time spear throws and jumps. There are, of course, additional puzzle elements that include stopping gadgets from rotating with your spear, guiding friendly beetle-like creatures into powering machinery and redirecting pipes to let out steam. In addition, I never felt like puzzles were repeated for the sake of artificially prolonging the game. 
+
+For a 2-3 hour game, Out of Line is a fun straightforward puzzle platformer filled with relaxing scenery, innovative puzzles, gorgeous art design, and a vague but intriguing story. Other than to gather all collectibles for the trophy achievement, there is little to no replayability for this game. Priced at $12.99, this game is better purchased during a sale, especially for those that are on the fence. Though Out of Line does not break the mold of puzzle platformer games, it is a game worth checking out if you have a desire for a visual and sensory experience and a free evening. 
