--- a/reviews/_posts/2021-06-13-tandem.md
+++ b/reviews/_posts/2021-06-13-tandem.md
@@ -17,7 +17,7 @@ multiplayer/co-op: no
 
 release date: october 12, 2021
 
-price: free (ty m.p.)
+price: a review copy of the title was provided by the publisher for review purposes
 
 msrp: $?
 
