--- a/reviews/_posts/2021-07-1-ool.md
+++ b/reviews/_posts/2021-07-1-ool.md
@@ -17,7 +17,7 @@ multiplayer/co-op: no
 
 release date: june 23, 2021
 
-price: free (ty n.m.)
+price: a review copy of the title was provided by the publisher for review purposes
 
 msrp: $12.99
 
