--- a/reviews/_posts/2020-07-27-mos.md
+++ b/reviews/_posts/2020-07-27-mos.md
@@ -20,7 +20,7 @@ multiplayer/co-op: no
 
 release date: july 28, 2020
 
-price: free (review code) $22.49 (pre-order)
+price: a review copy of the title was provided by the publisher for review purposes
 
 msrp: $24.99
 
