--- a/reviews/_posts/2020-12-29-pathless.md
+++ b/reviews/_posts/2020-12-29-pathless.md
@@ -17,7 +17,7 @@ multiplayer/co-op: no
 
 release date: november 12, 2020
 
-price: free (ty g.s.)
+price: a review copy of the title was provided by the publisher for review purposes
 
 msrp: $39.99
 
