--- a/reviews/_posts/2021-07-29-ascent.md
+++ b/reviews/_posts/2021-07-29-ascent.md
@@ -17,7 +17,7 @@ multiplayer/co-op: yes
 
 release date: july 29, 2021
 
-price: free (ty n.p.)
+price: a review copy of the title was provided by the publisher for review purposes
 
 msrp: $29.99
 
