--- a/reviews/_posts/2021-07-29-ascent.md
+++ b/reviews/_posts/2021-07-29-ascent.md
@@ -58,6 +58,8 @@ cons:
 
 **platinumed? no**
 
+The Ascent Review: Underwhelming Cyberpunk Hype
+
 Viewed from a distance, Veles, the cyberpunk planet dominated by The Ascent Group's arcology, looks like a massive and sprawling metropolis filled with life and promise. A closer look reveals the chaos and confusion that ensue in the wake of the collapse of the Ascent Group, the mega corporation that owns everyone. You play as an indent, or an indentured worker, who must ascend to the top of the social hierarchy and figure out what really happened. The Ascent is a solo and cooperative open world, isometric, top-down, twin-stick action rpg.  Like other games of the same genre, The Ascent may seem like the long-awaited fulfillment of the promise of a great cyberpunk experience. However, when experienced from up close, players will find that The Ascent is far from that, and will soon be forgotten in the shadows of its failed predecessors. 
 
 Veles is a vivid and intricate city, filled with neon signs, flashy billboards, futuristic hover cars, monolithic skyscrapers, and creatures from all over the galaxy. Neon Giant does a fantastic job creating a game drenched in atmosphere, weaving together conversations of passersby going about their day, billboard announcements over the speaker, endless drops of pouring rain, and neo noir electro synth soundtrack in the background.
