--- a/reviews/_posts/2021-08-23-lamentum.md
+++ b/reviews/_posts/2021-08-23-lamentum.md
@@ -24,3 +24,50 @@ msrp: $15.99
 platforms: pc, playstation, xbox, switch
 
 reviewed on: pc
+
+- visual: 9/10
+- audio: 10/10
+- gameplay: 8/10
+- narrative: 9/10
+- challenge: 9/10
+- replayability: 8/10
+- value: 9/10
+- personal grade: 9/10
+- was it scary? yes +1
+
+pros:
+- immersive atmosphere and worldbuilding
+- challenging, thought provoking puzzles
+- engaging narrative with deep lore
+- tension building save system
+- great music and sound design
+- humble price point
+
+cons:
+- hard difficulty curve (not a con, but not for everyone)
+- clunky combat
+
+
+**total score: 9/10**
+
+**buy at full price, sale, never: full**
+
+**hours spent on the game: 14 hours**
+
+**platinumed? no**
+
+Lamentum Review: Unforgiving Tale of Lovecraftian Sorrow
+
+Pixel art and horror? At first glance, these two categories seem ill suited for each other, yet Lamentum is more haunting because it’s not trying to scare you with photo-realistic ray-traced graphics. Two-person developer team Obscure Tales serves up a dreary survival horror experience in the form of Lamentum, a pixel art survival-horror game that takes place in New England in the mid-18th century and subtly reminds me of Yuppie Psycho mixed with Resident Evil and Silent Hill. Fittingly, this game’s name refers to lament, a passionate expression of grief or sorrow, which is a prominent theme of the game. You play as Victor, a young aristocrat that steps foot into the ominous Grau Hill Mansion, searching desperately to find a cure for his sickly wife.
+
+When your wife’s affliction cannot be cured by traditional medicine, you seek out a strange count who is a master of forgotten sciences and possesses knowledge beyond comprehension. The destiny of Victor and his wife are now in the hands of Edmond Steinrot, and a place only spoken of in whispers, Grau Hill. You soon find out that Victor is blinded by love and naive to the fullest extent. When he wakes up after a seemingly normal night’s sleep in the mansion, Victor discovers that everyone has disappeared, and instead, grotesque and cosmic creatures stalk the halls and corridors. Though his world is literally turned upside down, like in Stranger Things, Victor will stop at nothing to uncover the truth behind Grau Hill and save his beloved partner. The motifs of grief and sorrow go beyond just the protagonist himself, but encompass the entire history and mystery surrounding Grau Hill and its inhabitants.
+
+Visually speaking, the pixel art does great justice to the Victorian era aesthetic and deformed entities inspired by HP Lovecraft’s celestial creatures. There is never a shortage of creature variety as they get progressively malformed the deeper into the nightmare you go. Though there is no voice acting, the ambience invokes despair through music and sound design, the dark heart of the game. The duo developers are collaborating with Black Light Sound, a small Spain-based composer. They do a fantastic job piecing together the composition that includes off-putting cues in the presence of danger, violin strings playing violently during a boss encounter, and the calm melody of the safe room. The eerie paintings on the walls and bloodstained statues combined with tense change in audio always send a chill down my spine.
+
+Finding clues around the mansion and garden as to where your missing wife might be, you progress by acquiring a variety of weapons to use that contain a kitchen knife, knight’s blade, pistol and blunderbuss. Along the way, you are also presented with a variety of puzzles that are very reminiscent of old-school survival horror games. You are required to piece together cryptic tablets, dodge spikes, and perform a little bit of Victorian era chemistry experiments as well! There are also locked doors labeled with certain symbols that need to be revisited later when the appropriate key is obtained and dark areas where a lantern is needed to illuminate your surroundings. The immersion with the atmosphere of the game is well maintained as Lamentum does not hold your hand when it comes to solving these puzzles and riddles. Oftentimes, you need to do some thinking, exploring and digging before you figure out what to do next.
+
+Fitting right in with the unforgiving nightmare that is Grau Hill, Lamentum is both hardcore and difficult. Inventory space is meager, health points are low, ammo is limited, and enemies hit hard; you’ll be seeing the “You Died” screen as often as you would in a Dark Souls game. The combat of the game is a bit clunky as there is a long delay between choosing to attack and actually landing your attack. Though this might have been intended by the developers, fighting usually ended with me prematurely swinging to land my attack when the enemies entered the hitbox. There is no auto save, and manual save is limited and can only be done in specific safe rooms with consumable inkwells. These safe rooms contribute to the immersion of the game while also allowing Victor to write down his thoughts and remember the events that transpired before his nightmare. Fans of Resident Evil will recognize both the mechanics as well as the background music playing in the safe rooms, a dreary yet peaceful melancholic piano theme. Choosing between fight or flight and learning to save the game will be essential in progressing through the game. One thing worth commending is that there are always enough inkwells, ammunition, and healing items scattered throughout so that the game strikes an equilibrium between challenging and unbalanced. Due to its difficulty curve, manifestation of disempowerment, and lack of direction, Lamentum is not a game that everyone can finish, but a harrowing experience that every horror fan should have.
+
+Though the game is not replayable in the traditional sense that different dialogue options offer different outcomes, there are four different endings you can achieve based on your decisions nearing the end of the game, including a true secret ending. Additional secrets, characters, and collectibles can also be discovered if you have the itch to explore and learn more about the lore of the game.
+
+Lamentum embodies all the elements of a good survival horror game: helplessness, isolation, tension, uncertainty, and fear. In addition, it has every feature one would want in an old-school survivor horror game: grotesque monsters, an arsenal of weapons, brain-teasing puzzles, limited saves, free-roam exploration, and multiple endings. Lamentum is equal parts frightening as it is enticing, serving up a scintillating world filled with Lovecraftian horrors and remnants of old school Resident Evil and Silent Hill. It is a must-play for any fans of the genre looking for challenging gameplay, deep mythos, and an alluring narrative.
